# opengl_game

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  test.bat  workspace.code-workspace
assets/config/: spritemap_custom.yml  spritemap_kennynl.yml  spritemap_sprout.yml
assets/config/spritemaps/: custom_spaceships.yml
assets/scenes/: default.entt  default.yml
assets/shaders/: 2d_instanced.frag  2d_linear_to_srgb.frag
assets/textures_old/: wood.pngZone.Identifier
assets/textures_old/pbr_metalgrid/: metalgrid2_normal-dx.pngZone.Identifier
game/: CMakeLists.txt  game.cpp  game_components.hpp  main.cpp  main_old.cpp
game/modules/editor_map/: system.cpp
game/modules/physics/: process_move_objects.cpp
game/modules/renderer/: components.hpp  system.cpp
game/modules/ui_map_editor/: helpers.cpp  system.cpp
game/modules/ui_menu_bar/: system.cpp
game/src/: create_entities.cpp  create_entities.hpp  ecs.cpp  ecs.hpp  game.cpp  game.hpp  game_components.hpp  main.cpp  physics_layers.hpp  textures.hpp
game/src/components/: app.hpp  combat.hpp  components.hpp  cursor.hpp  destroy_after_time.hpp  grid.hpp  health.hpp  hierarchy.hpp  pathfinding.hpp  player.hpp  selectable.hpp  units.hpp
game/src/editor_camera/: helpers.cpp
game/src/game_modules/animations/: animated_cursor_click.cpp  animation_set_by_velocity.cpp
game/src/game_modules/components/: components.hpp  debug.hpp
game/src/game_modules/systems/: animated_cursor_click.cpp  animation_set_by_velocity.cpp  asteroid.cpp  cursor.cpp  objectives.cpp  player.cpp  select_objects_highlight.cpp  select_objects_move.cpp  turret.cpp  ui_highscore.cpp  ui_place_entity.cpp  unit_group_position_units.cpp
game/src/game_modules/turn_system/: system.cpp  system.hpp
game/src/gameplay_components/: components.hpp
game/src/gameplay_helpers/: create_entities.cpp  tile_types.hpp
game/src/gameplay_systems/: click_to_destroy.cpp  cursor.cpp  cycle_sprite.cpp  player_input.cpp  player_jump.cpp  player_move_on_grid.cpp
game/src/helpers/: create_entities.cpp
game/src/modules/animation/: components.hpp  system.cpp
game/src/modules/audio/: components.hpp  system.cpp
game/src/modules/broken_pathfinding/: pathfinding.cpp  pathfinding.hpp
game/src/modules/camera/: components.hpp  system.cpp  system.hpp
game/src/modules/editor_camera/: helpers.cpp  helpers.hpp  system.cpp  system.hpp
game/src/modules/editor_hex_map/: components.hpp  helpers.cpp  system.cpp
game/src/modules/editor_place_sprites/: system.cpp  system.hpp
game/src/modules/events/: system.cpp
game/src/modules/events/helpers/: mouse.cpp
game/src/modules/input/: components.hpp  system.cpp  system.hpp
game/src/modules/input/helpers/: controller.cpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp
game/src/modules/lifecycle/: components.hpp  system.cpp
game/src/modules/lifetime/: lifetime.hpp
game/src/modules/lighting/: system.cpp  system.hpp
game/src/modules/map/: components.hpp  system.cpp  system.hpp
game/src/modules/physics/: components.hpp  helpers.cpp  helpers.hpp  process_actor_actor.cpp  process_move_objects.cpp  system.cpp  system.hpp
game/src/modules/renderer/: components.hpp  system.cpp  system.hpp
game/src/modules/renderer/helpers/: helpers.cpp  helpers.hpp
game/src/modules/renderer/helpers/renderers/: batch_triangle.cpp
game/src/modules/sprites/: components.hpp  helpers.cpp  system.cpp  system.hpp
game/src/modules/ui_audio/: system.cpp  system.hpp
game/src/modules/ui_game/: system.cpp  system.hpp
game/src/modules/ui_gizmos/: system.cpp  system.hpp
game/src/modules/ui_hierarchy/: components.hpp  helpers.cpp  helpers.hpp  system.cpp  system.hpp
game/src/modules/ui_map/: components.hpp  helpers.cpp  helpers.hpp  system.cpp  system.hpp
game/src/modules/ui_map_editor/: components.hpp  helpers.cpp  helpers.hpp  system.cpp  system.hpp
game/src/modules/ui_physics/: system.cpp  system.hpp
game/src/modules/ui_profiler/: components.hpp  system.cpp  system.hpp
game/src/renderer/: system.cpp  system.hpp
game/src/renderer/helpers/: helpers.cpp  helpers.hpp
game/src/renderer/helpers/renderers/: batch_quad.cpp  batch_triangle.cpp  batch_triangle.hpp  batch_triangle_fan.cpp
game/src/resources/: audio.hpp  colour.hpp  textures.hpp
game/src/systems/: animation_set_by_velocity.cpp  click_to_destroy.cpp  collisions_actor_actor.cpp  collisions_actor_actor.hpp  cursor.cpp  cursor.hpp  cycle_sprite.hpp  destroy_after_time.cpp  destroy_after_time.hpp  objectives.cpp  objectives.hpp  pathfinding.cpp  pathfinding.hpp  player_input.cpp  player_input.hpp  player_jump.cpp  player_move_on_grid.cpp  select_objects.cpp  select_objects.hpp  select_objects_highlight.cpp  select_objects_highlight.hpp  select_objects_move.cpp  select_objects_move.hpp  unit_group_position_units.cpp  unit_group_position_units.hpp
game/src/ui_profiler/: system.cpp
game/systems/: click_to_destroy.cpp  cursor.cpp  destroy_after_time.cpp  no_oxy_zone.cpp  parry.cpp  player_input.cpp  velocity_in_boundingbox.cpp
game_old/: old_tower_defense_game.hpp  pathfinding.cpp
game_old/modules/animation/: system.cpp  system.hpp
game_old/modules/audio/: helpers.cpp  system.cpp  system.hpp
game_old/modules/editor_camera/: system.cpp  system.hpp
game_old/modules/editor_hex_map/: components.hpp  helpers.cpp  helpers.hpp  (+2 more)
game_old/systems/: click_to_destroy.cpp  click_to_destroy.hpp  collisions_actor_actor.cpp  collisions_actor_actor.hpp  cursor.cpp  cursor.hpp  destroy_after_time.cpp  destroy_after_time.hpp  parry.cpp  parry.hpp  player_input.cpp  player_input.hpp  velocity_in_boundingbox.cpp  velocity_in_boundingbox.hpp
old/: click_to_destroy.hpp  collisions_actor_actor.cpp  cycle_sprite.cpp  player_input.cpp  player_move_on_grid.hpp
old/defense_game/: player_jump.hpp
old/objectives/: system.cpp
old/pathfinding/: pathfinding.cpp
old/selectable/: select_objects.cpp  select_objects_move.cpp
old/turn_system/: system.cpp
old/ui_game/: system.cpp  system.hpp
tests/: CMakeLists.txt
tests/src/: main.cpp  test_entity.hpp
(+27 files in other folders)
